2011-04-17  Vladimir Serbinenko  <phcoder@gmail.com>

	Identify RAID by its UUID rather than (guessed) name.

	* grub-core/disk/raid.c (ascii2hex): New function.
	(grub_raid_open): Accept mduuid/%s specification.
	* grub-core/kern/emu/getroot.c (get_mdadm_name): Revamped into ...
	(get_mdadm_uuid): ... this.
	(grub_util_get_grub_dev): Use mduuid/%s if UUID is available.

2011-04-16  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/gfxmenu/gui_image.c (rescale_image): Don't attempt to scale
	to negative size.

2011-04-13  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub.d/10_linux.in: Add rootflags=subvol=<name> if / is on a
	btrfs subvolume.
	* util/grub.d/20_linux_xen.in: Likewise.

2011-04-13  Colin Watson  <cjwatson@ubuntu.com>

	Rewrite /proc/self/mountinfo handling to cope with bind-mounts and
	move-mounts appearing out of order.  Fixes Ubuntu bug #738345.

	* grub-core/kern/emu/getroot.c (find_root_device_from_mountinfo):
	Build a list of relevant visible mounts using the mnt_id and
	parent_mnt_id fields, and then scan that list at the end.

2011-04-12  Colin Watson  <cjwatson@ubuntu.com>

	* docs/grub.texi (normal): New section.
	(normal_exit): New section.
	(Embedded configuration): Add reference to normal.
	(GRUB only offers a rescue shell): Likewise.
	* docs/grub-dev.texi (Error Handling): Fix typo.

2011-04-12  Colin Watson  <cjwatson@ubuntu.com>

	* NEWS: Drop obsolete entry about probe-only btrfs support.

2011-04-12  Colin Watson  <cjwatson@ubuntu.com>

	* util/import_gcry.py: Fix typo.

2011-04-11  Vladimir Serbinenko  <phcoder@gmail.com>

	* NEWS: Add btrfs support.

2011-04-11  Vladimir Serbinenko  <phcoder@gmail.com>
2011-04-11  Colin Watson  <cjwatson@ubuntu.com>

	BtrFS support. Written by me (Vladimir) with important bugfixes and
	even more important testing by Colin.

	* Makefile.util.def (libgrubmods.a): Add crc.c and gzio.c
	* grub-core/Makefile.core.def (btrfs): Add crc.c.